src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <description>Select if this account is active or not.</description>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Area_Classification__c</fullName>
        <description>Automatically set from the AccountTrigger</description>
        <inlineHelpText>Classification by postal code (For Example Nielsen area data)</inlineHelpText>
        <label>Area Classification</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CustomerPriority__c</fullName>
        <description>Enter the customer priority.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ExternalId__c</fullName>
        <description>Enter the external ID of this account. This ID can also be used to push values into DFPs external ID on the company level.</description>
        <inlineHelpText>Enter the external ID of this account. This ID can also be used to push values into DFPs external ID on the company level.</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoiceEmail__c</fullName>
        <description>Enter the email address that should be used for sending invoice emails to the account.</description>
        <label>Invoice Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ADvendio__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__OVKParticipantID__c</fullName>
        <description>The OVK participant ID for this account</description>
        <inlineHelpText>The OVK participant ID for this account</inlineHelpText>
        <label>OVK Participant ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Payment_Terms__c</fullName>
        <description>Enter the Payment Terms for this account. This information can be used while creating new Media Campaigns.</description>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vorauskasse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__TotalNetRevenueLastYear__c</fullName>
        <description>This field displays the total net revenue last year. This field is automatically filled depending on the Media Campaigns.</description>
        <label>Total Net Revenue Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TotalNetRevenueNextYear__c</fullName>
        <description>This field displays the total net revenue next year. This field is automatically filled depending on the Media Campaigns.</description>
        <label>Total Net Revenue Next Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TotalNetRevenueThisYear__c</fullName>
        <description>This field displays the total net revenue this year. This field is automatically filled depending on the Media Campaigns.</description>
        <label>Total Net Revenue This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TotalNetRevenueYearBeforeLast__c</fullName>
        <description>This field displays the total net revenue year before last. This field is automatically filled depending on the Media Campaigns.</description>
        <label>Total Net Revenue Year Before Last</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TotalRevenueLastYear__c</fullName>
        <description>This field displays the total revenue last year. This field is automatically filled depending on the Media Campaigns.</description>
        <label>Total Revenue Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TotalRevenueNextYear__c</fullName>
        <description>This field displays the total revenue next year. This field is automatically filled depending on the Media Campaigns.</description>
        <label>Total Revenue Next Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TotalRevenueThisYear__c</fullName>
        <description>This field displays the total revenue this year. This field is automatically filled depending on the Media Campaigns.</description>
        <label>Total Revenue This Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__TotalRevenueYearBeforeLast__c</fullName>
        <description>This field displays the total revenue year before the last one. This field is automatically filled depending on the Media Campaigns.</description>
        <label>Total Revenue Year Before Last</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ADvendio__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__VATID__c</fullName>
        <description>The full VAT identification number is automatically filled by an workflow with the information of VAT Id Number and VAT Country.</description>
        <inlineHelpText>VAT identification number (VATIN)</inlineHelpText>
        <label>VAT ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__VatIdCountryPrefix__c</fullName>
        <description>This field retains the Country Code (ISO 3166) and is used for the VAT-ID check against the VIES databank of the European Union.</description>
        <inlineHelpText>Please select the ISO Code for the account&apos;s country.</inlineHelpText>
        <label>VAT Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CY</fullName>
                </value>
                <value>
                    <fullName>CZ</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>LU</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>SK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__VatIdInquiryResults__c</fullName>
        <description>When a VAT-ID is checked the interface will show you the results from the inquiry.</description>
        <inlineHelpText>When a VAT-ID is check here the interface will show you the results from the inquiry.</inlineHelpText>
        <label>VAT ID Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__VatIdLastCheck__c</fullName>
        <description>Last time the web service ran to check the VAT-ID using the VIES web service.</description>
        <inlineHelpText>Shows the last time the web service ran to check the VAT-ID using the VIES web service.</inlineHelpText>
        <label>Last VAT ID Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ADvendio__VatIdNumber__c</fullName>
        <description>This field retains the VAT - ID without the Country Prefix.</description>
        <inlineHelpText>Please enter the VAT - ID without the Prefix.</inlineHelpText>
        <label>VAT Id Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__VatIdStatus__c</fullName>
        <description>The VAT-ID Check shows you here a green check mark when the VAT-ID is valid, a red X when is not valid, an orange ball when technical problems was occurred and a gray ball when the VAT-ID is not entered or never checked.</description>
        <formula>IMAGE (
IF(ISBLANK(ADvendio__VatIdInquiryResults__c) ,&quot;/img/samples/flag_yellow.gif&quot;,
IF(CONTAINS(ADvendio__VatIdInquiryResults__c, &apos;Service&apos;) ,&quot;/img/samples/flag_yellow.gif&quot;,
IF(CONTAINS(ADvendio__VatIdInquiryResults__c,&apos;Valid VAT ID&apos;),&quot;/img/samples/flag_green.gif&quot;,
IF(CONTAINS(ADvendio__VatIdInquiryResults__c,&apos;Invalid VAT ID&apos;),&quot;/img/samples/flag_red.gif&quot;,&quot;/img/samples/flag_yellow.gif&quot;
)))),
&quot;Status Flag&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>green checkmark = VAT-ID valid
red X = VAT-ID invalid
orange ball = technical problems occurred
gray ball = VAT-ID not entered/not checked</inlineHelpText>
        <label>VAT ID Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountname_Kurzform__c</fullName>
        <description>Kurzform des Accountnamen zur einfachen Suche Beispiel
SevenOne Media GmbH - &gt; 71M SOM</description>
        <inlineHelpText>Kurzform des Accountnamen zur einfachen Suche Beispiel
SevenOne Media GmbH - &gt; 71M SOM</inlineHelpText>
        <label>Accountname Kurzform</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdF_Branchencluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vererbung der Inhalte des Feldes des Top1 Wirtschaftsbereiches.
Überschreibbar für AdF Concept Sales.</description>
        <inlineHelpText>Inhalte werden aus Top1 Wirtschaftsbereich vererbt und können durch AdF Concept Sales überschrieben werden.</inlineHelpText>
        <label>AdF-Branchencluster</label>
        <referenceTo>Som_Top1Wirtschaftsbereich__c</referenceTo>
        <relationshipLabel>Accounts (AdF-Branchencluster)</relationshipLabel>
        <relationshipName>AdF_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dig_ParentAccountNumber__c</fullName>
        <description>Account Nummer des übergeordneten Accounts</description>
        <formula>Parent.AccountNumber</formula>
        <inlineHelpText>Account Nummer des übergeordneten Accounts</inlineHelpText>
        <label>Parent Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasChildAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Zeigt an ob es untergeordneten Account gibt. Es wird von Trigger automatisch gepflegt.</description>
        <inlineHelpText>Zeigt an ob es untergeordneten Account gibt. Es wird von Trigger automatisch gepflegt.</inlineHelpText>
        <label>Untergeordneter Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inkasso_Status_Symbol__c</fullName>
        <description>Visuelle Anzeige des Inkasso-Status eines Accounts. Information wird manuell von Dilek oder Roman im Feld &quot;Inkasso-Status&quot; befüllt und gepflegt.</description>
        <formula>CASE(Inkasso_Status__c, &quot;OK&quot;,  IMAGE(&apos;http://www.71m.de/green.png&apos;, &quot;&quot;,12,12), 
&quot;offene Posten&quot;,  IMAGE(&apos;http://www.71m.de/yellow.png&apos;, &quot;&quot;,12,12), 
&quot;not OK&quot;,  IMAGE(&apos;http://www.71m.de/red.png&apos;, &quot;&quot;,12,12),
 IMAGE(&apos;http://www.71m.de/grey.png&apos;, &quot;&quot;,12,12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Visuelle Anzeige des Inkasso-Status eines Accounts. Information wird manuell von Dilek oder Roman im Feld &quot;Inkasso-Status&quot; befüllt und gepflegt.</inlineHelpText>
        <label>Inkasso-Status Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inkasso_Status__c</fullName>
        <description>stellt den Status eines Account dar in Bezug auf seinen Zahlungsstatus bei uns. Wird manuell von Dilek oder Roman mit Informationen von FI/REWE befüllt und gepflegt. Der Status &quot;notOk&quot; sieht Vorauskasse nach sich in der Auftragserfassung.</description>
        <inlineHelpText>stellt den Status eines Account dar in Bezug auf seinen Zahlungsstatus bei uns. Wird manuell von Dilek oder Roman mit Informationen von FI/REWE befüllt und gepflegt. Der Status &quot;notOk&quot; sieht Vorauskasse nach sich in der Auftragserfassung.</inlineHelpText>
        <label>Inkasso-Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK</fullName>
                </value>
                <value>
                    <fullName>offene Posten</fullName>
                </value>
                <value>
                    <fullName>not OK</fullName>
                </value>
                <value>
                    <fullName>unbekannt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Konzernmutter__c</fullName>
        <description>Angabe, welcher Account dem aktuellen Account am höchsten übergeordnet ist. (Root in der Account Hierarchie)</description>
        <formula>IF(Parent.Name = &quot;&quot;, Name,  IF(Parent.Parent.Name = &quot;&quot;, Parent.Name,  IF(Parent.Parent.Parent.Name = &quot;&quot;, Parent.Parent.Name, Parent.Parent.Parent.Name) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the account at the highest superior level of this account. (Root in the account hierarchy)</inlineHelpText>
        <label>Konzernmutter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Cluster__c</fullName>
        <label>Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead Gen/Classifieds</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Gift</fullName>
                </value>
                <value>
                    <fullName>Beauty &amp; Accessories</fullName>
                </value>
                <value>
                    <fullName>Home shopping</fullName>
                </value>
                <value>
                    <fullName>Power sales</fullName>
                </value>
                <value>
                    <fullName>“Strukturvertrieb”</fullName>
                </value>
                <value>
                    <fullName>Overall Digital Entertainment</fullName>
                </value>
                <value>
                    <fullName>Ad Tech</fullName>
                </value>
                <value>
                    <fullName>MCN/Video</fullName>
                </value>
                <value>
                    <fullName>7NXT</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>OTC</fullName>
                </value>
                <value>
                    <fullName>Bio Household &amp; Family</fullName>
                </value>
                <value>
                    <fullName>Med. Cosmetics  &amp; Personal Care</fullName>
                </value>
                <value>
                    <fullName>New Nutrition</fullName>
                </value>
                <value>
                    <fullName>Consumer  Med. Devices</fullName>
                </value>
                <value>
                    <fullName>Life &amp; Health  Services/Products</fullName>
                </value>
                <value>
                    <fullName>Broadcasting</fullName>
                </value>
                <value>
                    <fullName>CP: Non-Scripted</fullName>
                </value>
                <value>
                    <fullName>CP: Scripted</fullName>
                </value>
                <value>
                    <fullName>New Verticals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_EBITDA__c</fullName>
        <label>EBITDA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MA_MAAccountInhaber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>M&amp;A Account Inhaber</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MA_P7S1Unit__c</fullName>
        <label>P7S1 Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Games</fullName>
                </value>
                <value>
                    <fullName>SevenOne</fullName>
                </value>
                <value>
                    <fullName>TVD</fullName>
                </value>
                <value>
                    <fullName>7Next</fullName>
                </value>
                <value>
                    <fullName>P7S1 Group</fullName>
                </value>
                <value>
                    <fullName>Red Arrow</fullName>
                </value>
                <value>
                    <fullName>1-V-Commerce</fullName>
                </value>
                <value>
                    <fullName>V-Digital</fullName>
                </value>
                <value>
                    <fullName>Magic Internet</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Seven Ventures</fullName>
                </value>
                <value>
                    <fullName>PSD</fullName>
                </value>
                <value>
                    <fullName>Puls 4</fullName>
                </value>
                <value>
                    <fullName>SevenOne Capital</fullName>
                </value>
                <value>
                    <fullName>SevenTravel</fullName>
                </value>
                <value>
                    <fullName>Pay-VoD</fullName>
                </value>
                <value>
                    <fullName>Dig Entertain</fullName>
                </value>
                <value>
                    <fullName>7Innovate</fullName>
                </value>
                <value>
                    <fullName>7Next Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MA_UnitVisibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A Workflow field which goes to true once the Opportunity field UNIT contains the value (General M&amp;A and Transformative)</description>
        <label>Unit Visibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MA_Unit__c</fullName>
        <label>Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(A) Commerce</fullName>
                </value>
                <value>
                    <fullName>(B) Digital Entertainment</fullName>
                </value>
                <value>
                    <fullName>(C) 7NXT &amp; Adjacent</fullName>
                </value>
                <value>
                    <fullName>(D) Specialty Consumer</fullName>
                </value>
                <value>
                    <fullName>(E) Broadcasting &amp; Content Production</fullName>
                </value>
                <value>
                    <fullName>(F) General M&amp;A / Transformative</fullName>
                </value>
                <value>
                    <fullName>(G) 7Innovate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NielsenAreaCode__c</fullName>
        <description>Hier wird das durch die Postleitzahl der Rechnungsadresse ermittelte Nielsengebiet ausgegeben. Beim Löschen des Feldes wird das Nielsengebiet neu ermittelt.</description>
        <inlineHelpText>Hier wird das durch die Postleitzahl der Rechnungsadresse ermittelte Nielsengebiet ausgegeben.</inlineHelpText>
        <label>Nielsengebiet</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountBearbeitbar__c</fullName>
        <formula>if(
 SomTv_ZuUeberpruefenAcc__c = true ,
 IMAGE(&apos;/img/msg_icons/error16.png&apos;, &apos;Sorry, geht grad nicht, wird überprüft!&apos; ) + &apos; in Überprüfung&apos; ,
 IMAGE(&apos;/img/msg_icons/confirm16.png&apos;, &apos;Los gehts!&apos; ) + &apos; logisch&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account bearbeitbar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountId18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zeigt die 18-stellige Id des Accounts an, um sie z.B. in Berichten zu verwenden.</inlineHelpText>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountIndexErzeugen__c</fullName>
        <description>Steuert die Erstellung und Synchronisation eines Account Index für diesen Account</description>
        <formula>IF(
 AND (
  ungueltiger_Account__c = false ,
  CASE( P7S1_Unit__c  ,
   &quot;Aeria&quot; , 0,
&quot;App&quot; , 1,
&quot;D&amp;A&quot; , 1,
&quot;d&amp;a Sales&quot; , 1,
&quot;Licensing&quot; , 1,
&quot;M&amp;A&quot; , 1,
&quot;Magic&quot; , 1,
&quot;Maxdome&quot; , 1,
&quot;MediaSE&quot; , 1,
&quot;marktguru&quot; , 1,
&quot;PSD Branded Reselling&quot; , 1,
&quot;Puls4&quot; , 1,
&quot;Starwatch&quot; , 1,
&quot;Studio71&quot; , 1,
&quot;12Auto&quot; , 1,
&quot;7Commerce&quot; , 1,
&quot;7coops&quot; , 1,
&quot;7Games&quot; , 0,
&quot;7Life&quot; , 1,
&quot;7NXT&quot; , 1,
&quot;7Screen&quot; , 1,
&quot;7Sports&quot;, 1,
&quot;7Travel&quot; , 1,
&quot;7Ventures&quot; , 1,
&quot;71M&quot; , 1,
   0
  ) = 1
 ),
 TRUE ,
 FALSE
)</formula>
        <inlineHelpText>Steuert die Erstellung und Synchronisation eines Account Index für diesen Account</inlineHelpText>
        <label>Account Index erzeugen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountKoordinator__c</fullName>
        <formula>IF( P7S1_TopAccount__c ,   Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Koordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountNumberUnique__c</fullName>
        <description>Hilfsfeld, welches die Eindeutigkeit des Standardfelds &quot;AccountNumber&quot; sicherstellt</description>
        <inlineHelpText>Hilfsfeld, welches die Eindeutigkeit des Standardfelds &quot;AccountNumber&quot; sicherstellt</inlineHelpText>
        <label>P7S1_AccountNumberUnique</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountOrParentNumber__c</fullName>
        <description>Number of the account or if a parent account exists, the number of the parent account</description>
        <formula>IF ( ISBLANK ( ParentId ) ,  VALUE( AccountNumber ) ,  VALUE ( Parent.AccountNumber ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of the account or if a parent account exists, the number of the parent account</inlineHelpText>
        <label>Account or Parent Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountOrParent__c</fullName>
        <description>Name of the account or if a parent account exists, the name of the parent account</description>
        <formula>IF ( ISBLANK ( ParentId ) , Name , Parent.Name )</formula>
        <inlineHelpText>Name of the account or if a parent account exists, the name of the parent account</inlineHelpText>
        <label>Account or Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AccountVisibility__c</fullName>
        <description>Used for sharing, depends on visibility state
100 = visible (not invalid, not deleted)
50 = invalid (not deleted)
0 = deleted</description>
        <inlineHelpText>Used for sharing, depends on visibility state
100 = visible (not invalid, not deleted)
50 = invalid (not deleted)
0 = deleted</inlineHelpText>
        <label>Account Visibility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_AnzahlKABeziehungenAnalyse__c</fullName>
        <formula>IF(
 RecordType.Name = &quot;Werbetreibender&quot; ,
 IF(
  P7S1_AnzahlKABeziehungen__c = 0 ,
  &quot;Keine K-A-Beziehung vorhanden&quot; ,
  CASE( P7S1_AnzahlKABeziehungenRelevant__c ,
   0 , &quot;Fehler: keine relevante K-A-Beziehung vorhanden&quot; ,
   1 , &quot;Korrekt: eine relevante K-A-Beziehung vorhanden&quot; ,
   &quot;Fehler: mehr als eine relevante K-A-Beziehung vorhanden&quot;
  )
 ) ,
&quot;Analyse ist nur für Datensatztyp Werbetreibender relevant&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anzahl K-A-Beziehungen Analyse</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_AnzahlKABeziehungenRelevant__c</fullName>
        <description>zählt die Anzahl relevanter Kunde-Agentur-Beziehungen</description>
        <label>Anzahl K-A-Beziehungen relevant</label>
        <summaryFilterItems>
            <field>SomTv_KundeAgenturBeziehung__c.SomTv_RelevanteBeziehung__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SomTv_KundeAgenturBeziehung__c.Kunde__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>P7S1_AnzahlKABeziehungen__c</fullName>
        <description>zählt die Anzahl Kunde-Agentur-Beziehungen</description>
        <label>Anzahl K-A-Beziehungen</label>
        <summaryForeignKey>SomTv_KundeAgenturBeziehung__c.Kunde__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>P7S1_AutoNumber__c</fullName>
        <description>Autonummernfeld, befüllt 1:1 AutoNumber</description>
        <displayFormat>{0}</displayFormat>
        <inlineHelpText>Autonummernfeld, befüllt 1:1 AutoNumber</inlineHelpText>
        <label>P7S1_AutoNumber__c</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>P7S1_AutomaticalApproval__c</fullName>
        <description>Field is set on submission of Approval Process and sets the time a record will be approved automatically. Processing of the approval is done in an APEX batch class.</description>
        <inlineHelpText>Field is set on submission of Approval Process and sets the time a record will be approved automatically.</inlineHelpText>
        <label>automatische Genehmigung</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>P7S1_Begruendung_Ungueltig_setzen__c</fullName>
        <description>Bitte trage hier die Quelle und den Grund ein, weshalb der Account gültig/ungültig gesetzt werden soll.</description>
        <inlineHelpText>Bitte trage hier die Quelle und den Grund ein, weshalb der Account gültig/ungültig gesetzt werden soll.</inlineHelpText>
        <label>Begründung gültig/ungültig setzen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_CreatorSphere__c</fullName>
        <description>Sphäre (SomDe, SomAt...) des Erstellers des Accounts</description>
        <formula>TEXT(CreatedBy.P7S1_Sphere__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sphere (AER, SGN,..):  Creator of the account</inlineHelpText>
        <label>Ersteller-Sphäre</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_DWH_ProRexID__c</fullName>
        <description>Liefert die Accountnummer (ProRexID) als Text an. Wird so von DWH benötigt.
Gefüllt mit Feldaktualisierung.</description>
        <externalId>true</externalId>
        <inlineHelpText>Liefert die Accountnummer (ProRexID) als Text an. Wird so von DWH benötigt.
Gefüllt mit Feldaktualisierung.</inlineHelpText>
        <label>ProRex-ID (DWH)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_DandACluster__c</fullName>
        <description>Feld für die Differenzierung von Clustern innerhalb einer Unit (bspw. d&amp;a Sales mit 7NXT, 7Travel und 7Commerce).</description>
        <label>d&amp;a Sales Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>d&amp;a Sales</fullName>
                    <default>true</default>
                    <label>d&amp;a Sales</label>
                </value>
                <value>
                    <fullName>7NXT</fullName>
                </value>
                <value>
                    <fullName>7TRAVEL</fullName>
                </value>
                <value>
                    <fullName>7COMMERCE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>